--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ok</h1>
-    <form name="contact" netlify>
+    <form name="contacta" netlify>
     <p>
         <label>Name <input type="text" name="name" /></label>
     </p>
@@ -19,7 +19,7 @@
     </p>
     </form>
     <hr>
-    <form name="contact" method="POST" data-netlify="true">
+    <form name="contactb" method="POST" data-netlify="true">
     <p><label>Nama: <input type="text" name="name" /></label></p>
     <p><label>Email: <input type="email" name="email" /></label></p>
     <p><label>Pesan: <textarea name="message"></textarea></label></p>
