--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -10,7 +10,7 @@
     <button @click="count++">Tambah</button>
     <p>Nilai: <span x-text="count"></span></p>
   </div>
-  <script>
+  <script type="module">
     console.log(import.meta.env.FBS_URL);
   </script>
 </body>
