--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Alpine Example</title>
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-</head>
-<body>
-  <div x-data="{ count: 0 }">
-    <button @click="count++">Tambah</button>
-    <p>Nilai: <span x-text="count"></span></p>
-  </div>
-  <script type="module">
-    console.log(import.meta.env.FBS_URL);
-  </script>
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Verifikasi Barang Masuk</title>
+      <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/021/382/895/non_2x/maori-style-tribal-totem-logo-vector.jpg" />
+      <script src="https://cdn.tailwindcss.com"></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  </head>
+  <body>
+    <div x-data="{ count: 0 }">
+      <button @click="count++">Tambah</button>
+      <p>Nilai: <span x-text="count"></span></p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.9.0/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diarmacpro/cdnku@4849b7e3a19e88b14d27454f60d16c062e16648d/core.js" integrity="sha256-xxU8WD/MI8uoZ1geRPVqbSvo6MuHLOUHfu/0Vg8Bewg=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diarmacpro/cdnku@35e5003dbb8177b966f240b861c2bb547fc7f013/firebase-olah-data/f.o.d_v.0.2.js" integrity="sha256-5kpwc2PDnZf+BOBdrhIYWlFq4QlxajP7UhRJZtU3Wos=" crossorigin="anonymous"></script>
+
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js';
+        import { getDatabase, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off } from 'https://www.gstatic.com/firebasejs/11.7.1/firebase-database.js';
+
+        const app = initializeApp({ databaseURL: "https://stock-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
+        const db = getDatabase(app);
+        Object.assign(window, { db, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off });
+    </script>
+    <script>
+      var fbsSvc,dt = {};
+      $(()=>{
+        const urlParams = new URLSearchParams(window.location.search);
+        tgl = urlParams.get('tgl');
+        fbsSvc = new Fbs(db);
+      })
+    </script>
+  </body>
 </html>
