--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Verifikasi Barang Masuk</title>
-      <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/021/382/895/non_2x/maori-style-tribal-totem-logo-vector.jpg" />
+      <link rel="icon" href="https://cdn-icons-png.freepik.com/512/5417/5417302.png" />
       <script src="https://cdn.tailwindcss.com"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
