--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -24,7 +24,7 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js';
         import { getDatabase, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off } from 'https://www.gstatic.com/firebasejs/11.7.1/firebase-database.js';
 
-        const app = initializeApp({ databaseURL: "https://stock-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
+        const app = initializeApp({ databaseURL: "https://absen-weva-default-rtdb.asia-southeast1.firebasedatabase.app" });
         const db = getDatabase(app);
         Object.assign(window, { db, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off });
     </script>
