--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -5,6 +5,16 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Verifikasi Barang Masuk</title>
       <link rel="icon" href="https://cdn-icons-png.freepik.com/512/5417/5417302.png" />
+      <script>
+        const originalWarn = console.warn;
+        console.warn = function (...args) {
+          if (
+            typeof args[0] === 'string' &&
+            args[0].includes('cdn.tailwindcss.com should not be used in production')
+          ) return;
+          originalWarn.apply(console, args);
+        };
+      </script>
       <script src="https://cdn.tailwindcss.com"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
