--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -37,7 +37,7 @@
             <div class="w-6 h-6"></div> <!-- Spacer karena tidak ada tombol close -->
           </div>
 
-          <form @submit.prevent class="space-y-4">
+          <form @submit.prevent class="space-y-4" autocomplete="off">
             <!-- Input Group -->
             <template x-for="field in fields" :key="field.name">
               <div class="relative">
@@ -46,6 +46,7 @@
                   :name="field.name"
                   :id="field.name"
                   x-model="form[field.name]"
+                  autocomplete="off"
                   class="peer w-full p-2 pt-6 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder-transparent"
                   :placeholder="field.label"
                 />
