--- a/tracking-data-sj/index.html
+++ b/tracking-data-sj/index.html
@@ -19,7 +19,7 @@
     
 
     <script type="module">
-      import { dtDeepSearchSJ } from './assets/alpine-sj.js';
+      import { dtDeepSearchSJ } from './assets/app.js';
       window.dtDeepSearchSJ = dtDeepSearchSJ;
     </script>
 
@@ -444,7 +444,7 @@
 
 
     <script type="module">
-      import { utility } from './utility.js';
+      import { utility } from './assets/utility.js';
       window.u = new utility();
     </script>
   </body>
